tests/executionspec/snapshots/execution_spec__test-http-baseurl.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  bar: String
  foo: String
}

scalar Url

schema {
  query: Query
}
