tests/executionspec/snapshots/execution_spec__test-http-baseurl.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://abc.com") {
  query: Query
}

type Query {
  bar: String @http(path: "/bar")
  foo: String @http(baseURL: "http://foo.com", path: "/foo")
}
