tests/executionspec/snapshots/execution_spec__test-http-with-mustache-expr.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type A {
  a: Int
  bc: BC @expr(body: {d: "{{.value.d}}", f: "{{.value.f}}"})
  d: D @modify(omit: true)
}

type BC {
  d: D
  f: Boolean
}

type D {
  e: Int
}

type Query {
  a: A @http(baseURL: "http://localhost:3000", path: "/a")
}
