tests/executionspec/snapshots/execution_spec__test-inline-list.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type B {
  c: String
}

scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  foo: B
}

scalar Url

schema {
  query: Query
}
