tests/executionspec/snapshots/execution_spec__test-merge-batch.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(batch: {delay: 5, headers: ["a", "b", "c"], maxSize: 100}) {
  query: Query
}

type Query {
  hello: String @expr(body: "world")
}
